# prog

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  INVARIANTS.md  LICENSE  README.md  deny.toml
.github/scripts/: check-version-consistency.sh
.github/workflows/: ci.yml  release.yml
crates/prog-adapters/: Cargo.toml
crates/prog-adapters/src/: cli.rs  http.rs  lib.rs  mcp.rs
crates/prog-adapters/tests/: cli.rs  http.rs  mcp.rs
crates/prog-cli/: Cargo.toml
crates/prog-cli/src/: cli_args.rs  main.rs  obligation.rs  reports.rs
crates/prog-cli/src/commands/: adapters.rs  cache.rs  call.rs  cost.rs  delta.rs  discover.rs  envelope.rs  expand.rs  hints.rs  init.rs  lenses.rs  mcp_task.rs  meta.rs  mod.rs  navigation.rs  observe.rs  paths.rs  profiles.rs  recipe.rs  run.rs  session.rs  source.rs
crates/prog-cli/tests/: cache.rs  cli.rs  competitive_baselines.rs  cost.rs  delta.rs  docs_examples.rs  eval.rs  evidence_acquisition.rs  init.rs  messy_matrix.rs  navigation.rs  observe.rs  paths.rs  real_world_demos.rs  replay_eval.rs  source.rs  task_success.rs
crates/prog-cli/tests/fixtures/pagination/: cursor-token.json  link-header.json  offset-limit.json
crates/prog-cli/tests/support/: mod.rs
crates/prog-core/: Cargo.toml
crates/prog-core/src/: contracts.rs  delta.rs  disclosure.rs  error.rs  findings.rs  importers.rs  lens.rs  lib.rs  lifecycle.rs  navigation.rs  pagination.rs  pointer.rs  policy.rs  redaction.rs  shape.rs  source_state.rs  store.rs  table.rs  workspace.rs
crates/prog-core/src/providers/: cargo_json.rs  cargo_libtest.rs  common.rs  mod.rs  pytest_json.rs  pytest_text.rs
crates/prog-core/tests/: contracts.rs  disclosure.rs  findings.rs  findings_proptest.proptest-regressions  findings_proptest.rs  importers.rs  lens.rs  lifecycle.rs  navigation.rs  pagination.rs  policy.rs  providers.rs  providers_proptest.rs  redaction.rs  shape.proptest-regressions  shape.rs  store.rs  table.rs  workspace.rs
crates/prog-core/tests/fixtures/: cli_source_profile.json  http_source_profile.json  mcp_source_profile.json
crates/prog-core/tests/fixtures/findings/: compile-error.expected.json  compile-error.json  diff-review.expected.json  diff-review.json  mixed.expected.json  mixed.json  run-failure.expected.json  run-failure.json  test-failure.expected.json  test-failure.json
crates/prog-core/tests/fixtures/providers/: cargo-json-diagnostics.expected.json  cargo-json-diagnostics.json  cargo-libtest-json.expected.json  cargo-libtest-json.json  pytest-json-report.expected.json  pytest-json-report.json
demos/real-world/: README.md  demo_mcp_server.py  generate_payload.py  report_payloads.py
demos/real-world/seeds/: cloudwatch-logs.json  github-pr-review.json  jira-triage.json  kubectl-events.json  mcp-incidents.json
docs/: README.md  cache.md  competitive-baselines.md  contracts.md  cost.md  delta.md  evidence-acquisition.md  evidence-navigation.md  evidence.md  findings.md  integrations.md  lens-packs.md  lenses.md  mcp-tasks.md  metadata.md  observe.md  paths.md  positioning.md  real-world-demos.md  release-notes.md  replay-eval.md  run.md  safety.md  source-setup.md  task-success-eval.md  token-economics.md  verification.md  walkthroughs.md
docs/rfcs/: 0001-progressive-disclosure-gateway.md  0002-type-theory-formal-methods-and-reflexivity.md  0003-observation-lenses.md
fixtures/cli/: list_items.py  seed.json
fixtures/evals/: competitive-baseline-metrics.json  evidence-acquisition-metrics.json  real-world-demo-metrics.json  replay-metrics.json  task-success-metrics.json
fixtures/evidence/: cargo-compile.json  cargo-json-diagnostics.json  cargo-test.json  noisy-log.json  pytest-json-report.json  pytest.json  sarif.json
fixtures/http/: items.json  seed.json
fixtures/mcp/: fixture_mcp.py  seed.json
lenses/: README.md  cargo-test.json  github-issues.json  github.issues.triage.json  go-test.json  json.items.triage.json  junit.json  kubectl-json.json  logs.json  npm-test.json  observe.ndjson.records.json  observe.text.logs.json  pytest.json  run.failures.json  run.streams.json  sarif.json  unified-diff.json
lenses/fixtures/: cargo-test-run.json  github-issues-run.json  github-issues.json  go-test-run.json  json-items.json  junit-normalized.json  kubectl-pods.json  ndjson-records-normalized.json  npm-test-run.json  pytest-run.json  run-failure.json  run-success.json  sarif.json  text-log-normalized.json  unified-diff-normalized.json
lenses/fixtures/counterexamples/: json-items.json  text-log-normalized.json
models/: fable-class-2026-07.json
scripts/: regenerate-eval-fixtures.sh
skills/prog/: SKILL.md
