[workspace]
resolver = "3"
members = ["crates/prog-core", "crates/prog-adapters", "crates/prog-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/aphoristicartist/prog"

[workspace.dependencies]
prog-core = { path = "crates/prog-core" }
prog-adapters = { path = "crates/prog-adapters" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
schemars = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
redb = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
rmcp = { version = "2", features = ["client", "transport-child-process"] }
libc = "0.2"
clap = { version = "4", features = ["derive", "env"] }
proptest = "1"
tempfile = "3"
wiremock = "0.6"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"

[profile.release]
lto = "thin"
