[package]
name = "prog-cli"
description = "prog: a universal progressive-disclosure gateway for HTTP APIs, CLIs, and MCP servers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
include = ["src/**/*.rs", "Cargo.toml"]

[[bin]]
name = "prog"
path = "src/main.rs"

[dependencies]
prog-core.workspace = true
prog-adapters.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
schemars.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
sha2.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
proptest.workspace = true

[lints]
workspace = true
