[package]
name = "prog-core"
description = "Contracts, shape lattice, disclosure lens, cursors, redaction, cache, and safety policy for prog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
uuid.workspace = true
redb.workspace = true
tracing.workspace = true
regex.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
